<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Simple MP3 Downloader</string>
    <string name="tap_to_open">Tap to open</string>
    <string name="service_started">Service Started</string>
    <string name="search">Search</string>
    <string name="downloads">Downloads</string>
    <string name="go">Go!</string>
    <string name="player_error">"Couldn't play stream, the file might not be available at the moment!"</string>
    <string name="song_separator">-</string>
    <string name="no_external_storage">Download not started, no memory card installed or mounted!</string>
    <string name="fmt_filesize">%1$.1f MB</string>
    <string name="search_hint">Title, artist or album</string>
    <string name="no_downloads_yet">No downloads in the queue yet!</string>
    <string name="service_unavailable">Search service is temporarily unavailable, please try again later!</string>
    <string name="invalid_server_status">The server returned an invalid status, try again later or check for updates!</string>
    <string name="unparseable_response">The server returned an invalid response, try again later or check for updates!</string>
    <string name="fmt_download_started">\"%1$s\" added to downloads.</string>
    <string name="download_duplicate">This song is already present in the download queue!</string>
    <string name="fmt_download_enqueue_error">Song \"%1$s\" failed to enqueue in downloads!</string>
    <string name="artist_dummy">The Black Eyed Peas</string>
    <string name="duration_dummy">3:41</string>
    <string name="song_dummy">"Don't stop the party"</string>
    <string name="download">Download</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="retry">Retry</string>
    <string name="okay">OK</string>
    <string name="remove">Remove</string>
    <string name="library_empty">Successful downloads will show up here!</string>
    <string name="delete">Delete</string>
    <string name="library">Library</string>
    <string name="fmt_lib_delete">Are you sure you want to delete: \"%1$s\"?</string>
    <string name="delete_song">Delete Song</string>
    <string name="dlg_yes">Yes</string>
    <string name="dlg_no">No</string>
    <string name="fmt_first_download">"Once a download completes it is automatically added to the music library, ready for playback.
If you need access to the files, you can find them in: \"%1$s\""</string>
    <string name="dlg_ok">OK</string>
    <string name="not_online">Make sure your Internet connection is enabled!</string>
    <string name="about">About</string>
    <string name="facebook_url">https://www.facebook.com/pages/Simple-mp3-Downloader/213071885460104</string>
    <string name="twitter_url">https://twitter.com/simplemp3dl</string>
    <string name="fmt_version">Version %1$s</string>
    <string name="get_in_touch">Get in touch or leave a rating in the Market!</string>
    <string name="license">By using this application you agree to the following <a href="http://www.goldennuggetapps.org/disclaimer.html">Terms of Use</a>. If you do not agree, please uninstall this application immediately.</string>
    <string name="license_agreement">License Agreement</string>
    <string name="dlg_accept">Accept</string>
    <string name="dlg_decline">Decline</string>
    <string name="no_results">No songs found that matched the query.</string>
    <string name="loading">Loading…</string>
    <string name="send_ringtone"><u>Send Ringtone</u></string>
    <string name="donate_bitcoin">Donate Bitcoin</string>
    <string name="donate_reason">Like this app? Donate some Bitcoin to the Development Fund, any amount is appreciated :)</string>
    <string name="copy_address">Copy Address</string>
    <string name="view_qr_code">View QR Code</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_download">DownloadActivity</string>
    <string name="title_activity_lib">LibActivity</string>
</resources>
