<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/rel_song_item" android:paddingLeft="8.0dip" android:paddingTop="12.0dip" android:paddingRight="8.0dip" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="13.329987sp" android:textColor="@color/clr_duration_size" android:gravity="left|center" android:id="@id/lbl_song_duration" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/duration_dummy" android:maxLines="1" android:singleLine="true" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
    <TextView android:textSize="16.0sp" android:textColor="@color/clr_label_txt" android:gravity="left|center" android:id="@id/lbl_song_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/song_dummy" android:maxLines="1" android:singleLine="true" android:layout_toLeftOf="@id/lbl_song_duration" />
    <TextView android:textSize="13.329987sp" android:textColor="@color/clr_dimmed_lbl_txt" android:gravity="left|center" android:id="@id/lbl_song_artist" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/artist_dummy" android:maxLines="1" android:singleLine="true" android:layout_below="@id/lbl_song_title" />
    <LinearLayout android:orientation="horizontal" android:id="@id/lin_buttons" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_below="@id/lbl_song_artist" android:layout_alignParentRight="true">
        <Button android:id="@id/btn_delete_song" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/delete" style="@style/redButtonStyle" />
        <Button android:id="@id/btn_download_song" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/download" />
        <Button android:id="@id/btn_play_song" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/play" />
    </LinearLayout>
</RelativeLayout>