<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:id="@id/adLayout" android:layout_width="fill_parent" android:layout_height="50.0dip" />
    <RadioGroup android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RadioButton android:id="@id/btn_view_search" android:layout_width="wrap_content" android:layout_height="46.0dip" android:checked="true" android:text="@string/search" style="@style/tabButton" />
        <RadioButton android:id="@id/btn_view_downloads" android:layout_width="wrap_content" android:layout_height="46.0dip" android:text="@string/downloads" style="@style/tabButton" />
        <RadioButton android:id="@id/btn_view_library" android:layout_width="wrap_content" android:layout_height="46.0dip" android:text="@string/library" style="@style/tabButton" />
    </RadioGroup>
    <FrameLayout android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <FrameLayout android:id="@id/frl_search" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <include layout="@layout/search" />
        </FrameLayout>
        <FrameLayout android:id="@id/frl_downloads" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <include layout="@layout/downloads" />
        </FrameLayout>
        <FrameLayout android:id="@id/frl_library" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <include layout="@layout/library" />
        </FrameLayout>
    </FrameLayout>
    <RelativeLayout android:id="@id/rel_player" android:padding="6.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <FrameLayout android:id="@id/frl_player_controls" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="6.0dip" android:layout_alignParentLeft="true">
            <ProgressBar android:id="@id/prg_player" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <Button android:id="@id/btn_play" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/play" />
            <Button android:id="@id/btn_stop" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/stop" />
        </FrameLayout>
        <com.sim.golden.utils.MarqueeTextView android:textColor="@color/clr_label_txt" android:ellipsize="marquee" android:id="@id/lbl_title" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/song_separator" android:scrollHorizontally="true" android:singleLine="true" android:layout_toRightOf="@id/frl_player_controls" android:layout_alignParentTop="true" android:marqueeRepeatLimit="marquee_forever" android:inputType="none" />
        <SeekBar android:id="@id/prg_duration" android:paddingLeft="5.659973dip" android:paddingRight="5.659973dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:maxHeight="14.0dip" android:progressDrawable="@drawable/lyl_progressbar" android:thumb="@drawable/sel_seek_thumb" android:thumbOffset="5.659973dip" android:layout_toRightOf="@id/frl_player_controls" android:layout_below="@id/lbl_title" style="?android:attr/progressBarStyleHorizontal" />
    </RelativeLayout>
</LinearLayout>