<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:paddingLeft="8.0dip" android:paddingTop="12.0dip" android:paddingRight="8.0dip" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="13.329987sp" android:textColor="@color/clr_duration_size" android:gravity="left|center" android:id="@id/lbl_song_size" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLines="1" android:singleLine="true" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
    <TextView android:textSize="16.0sp" android:textColor="@color/clr_label_txt" android:gravity="left|center" android:id="@id/lbl_song_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/song_dummy" android:maxLines="1" android:singleLine="true" android:layout_toLeftOf="@id/lbl_song_size" />
    <TextView android:textSize="13.329987sp" android:textColor="@color/clr_dimmed_lbl_txt" android:gravity="left|center" android:id="@id/lbl_song_artist" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/artist_dummy" android:maxLines="1" android:singleLine="true" android:layout_below="@id/lbl_song_title" />
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_below="@id/lbl_song_artist">
        <ProgressBar android:id="@id/prg_download" android:layout_width="fill_parent" android:layout_height="wrap_content" android:progressDrawable="@drawable/lyl_progressbar" android:layout_toLeftOf="@id/lin_buttons" android:layout_alignParentLeft="true" android:layout_centerVertical="true" style="?android:attr/progressBarStyleHorizontal" />
        <TextView android:textSize="13.329987sp" android:textColor="@color/clr_dimmed_lbl_txt" android:gravity="left|center" android:id="@id/lbl_status" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_toLeftOf="@id/lin_buttons" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        <LinearLayout android:orientation="horizontal" android:id="@id/lin_buttons" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="6.0dip" android:layout_alignParentRight="true">
            <Button android:id="@id/btn_retry_dl" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/retry" />
            <Button android:id="@id/btn_remove_dl" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/remove" />
            <Button android:id="@id/btn_ok_dl" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/okay" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>